tests/invalid/function/local_let_rec_unknown_capture_name.facet
fn main() -> unrestricted isize {
  let rec [y] f(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in (f 1)
}
